--- a/project2/makefile
+++ b/project2/makefile
@@ -1,6 +1,8 @@
 all:
 	gcc -std=gnu99 -o sender sender.c
-	gcc -std=gnu99 -o reciever reciever.c
+	gcc -std=gnu99 -o receiver receiver.c
 
 clean:
-	rm sender reciever
+	rm sender receiver
+	rm *_transfer
+	rm *~
